# xeus-basic

./: .environment.yml  .gitignore  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  environment.yml  postBuild
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml  improve.yml
.github/workflows/: codeql-analysis.yml
include/xbasic/: xbasic_interpreter.hpp
libs/basic/: CMakeLists.txt  main.cc
libs/basic/include/: basic.hpp
libs/basic/include/basic/: arch.h  array.h  basic.hpp  callback.h  dictionary.h  error.h  hexdump.h  io.h  kbhit.h  lines.h  parser.h  tokenizer.h  variables.h
libs/basic/src/: arch.c  array.c  dictionary.c  error.c  hexdump.c  io.c  kbhit.c  lines.c  parser.c  tokenizer.c  variables.c
share/jupyter/kernels/xbasic/: kernel.json  kernel.json.in
src/: main.cc  xbasic_interpreter.cpp
